# bsk_git_viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: devcommands.txt
frontend/src/: App.tsx
frontend/src/components/BranchGraph/: BranchGraph.css  BranchGraph.tsx
frontend/src/components/RepoTimeLine/: CommitMarker.tsx  RepoTimeLine.css  RepoTimeLine.tsx  TimeLineTicks.tsx  index.ts
frontend/src/pages/: RepositoryPage.tsx
frontend/src/types/: git.ts
frontend/src/utils/: color.ts  time.ts
src/bsk_git_viewer/: cli.py  debug.py  git_reader.py  models.py  server.py
src/bsk_git_viewer/git/: commit_sequence_extraction.py  git_tree.py  tree_diff.py
src/bsk_git_viewer/gitcreate/: git_sceneria_creator.py
src/bsk_git_viewer/inference/: commit_sequence_extraction.py  compute_commit_similarity.py  compute_pre_diffs.py  gitcommandinference.py
src/bsk_git_viewer/utils/: diffcomparator.py  gittree.py  parse_utils.py  sequence_matching.py
tests/unit/: test_compute_pre_diffs.py
tests/unit/git/: test_commit_sequence_extraction.py  test_git_tree.py  test_tree_diff.py
tests/unit/gitcreate/: test_git_sceneria_creator.py
tests/unit/inference/: test_commit_sequence_extraction.py  test_compute_commit_similarity.py  test_comupute_commit_similarity.py
tests/unit/utils/: test_sequence_matching.py
