[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "bsk-git-viewer"
version = "0.1.0"
description = "Interactive Git Commands Viewer"
requires-python = ">=3.10"

dependencies = [
	"fastapi",
	"uvicorn",
	"typer",
	"rich",
	"dulwich",
]

[project.scripts]
bsk-git-viewer = "bsk_git_viewer.cli:cmd_app"
bsk-git-debug = "bsk_git_viewer.debug:app"

[tool.setuptools.packages.find]
where = ["src"]

